# FitGenesis

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  LICENSE  README.md  docker-compose.yml  tsconfig.json
.github/workflows/: ci.yml
apps/backend/: package.json
apps/backend/src/: app.ts
apps/backend/src/controllers/: UserController.ts
apps/backend/src/models/: User.ts  WorkoutPlan.ts  WorkoutSession.ts
apps/backend/src/routes/: workoutRoutes.ts
apps/backend/src/services/: workoutGenerator.ts
apps/frontend/: package.json  tsconfig.json
apps/frontend/src/: App.tsx
apps/frontend/src/api/: auth.ts  genetics.ts
apps/frontend/src/components/dashboard/: StatsCard.tsx
apps/frontend/src/components/layout/: Navbar.tsx
apps/frontend/src/components/workouts/: WorkoutCard.tsx
apps/frontend/src/contexts/: AuthContext.tsx
apps/frontend/src/pages/: Genetics.tsx  Home.tsx  Login.tsx  Register.tsx  WorkoutDetail.tsx  Workouts.tsx
contracts/: Cargo.toml
contracts/src/: lib.rs  token.rs
