[package]
name = "fitgenesis"
version = "1.0.0"
edition = "2021"
description = "FitGenesis Token and Ecosystem Smart Contracts"
authors = ["FitGenesis Team"]
license = "MIT"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
borsh = "0.10"
borsh-derive = "0.10"

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16" 