[package]
name = "fitgenesis-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for the FitGenesis platform"
authors = ["FitGenesis Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "fitgenesis_contracts"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.7"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
thiserror = "1.0.56"
borsh = "0.10.3"

[dev-dependencies]
solana-program-test = "1.17.7"
solana-sdk = "1.17.7"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 